bugfix: bound box overlaps table with info

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -98,6 +98,7 @@ div.wrapper_container {
 
 .face_rectangle:hover .face_info {
     display: block;
+    z-index: 9999;
 }
 
 .face_rectangle .face_info span {
